2008-05-09  Michael Albinus  <michael.albinus@gmx.de>

	* simple.el (start-file-process): Clarify docstring.

2008-05-09  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc-sccs.el, vc.svn.el, vc-git.el, vc-hg.el, vc-mtn.el: Remove
	stub implementations of, and references to, wash-log.
	* vc-rcs.el (vc-rcs-comment-history), 
	vc-cvs.el (vc-cvs-comment-history):
	Inline the code that used to be wash-log.

	* vc-sccs.el (vc-sccs-checkin, vc-sccs-checkout, vc-sccs-rollback)
	(vc-sccs-revert, vc-sccs-steal-lock, vc-sccs-modify-change-comment,
	vc-sccs-print-log, vc-sccs-diff): Grok directories.
	* vc-rcs.el (vc-sccs-checkin, vc-sccs-checkout,
	(vc-rcs-revert, vc-rcs-steal-lock, vc-rcs-modify-change-comment)
	(vc-rcs-print-log): Grok directories.

2008-05-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc.el (vc-mark-resolved): Add `backend' argument.
	(vc-next-action): Pass it the backend.
	(vc-next-action, vc-checkout, vc-mark-resolved, vc-version-diff)
	(vc-merge, vc-rollback, vc-update, vc-transfer-file, vc-delete-file)
	(vc-default-comment-history, vc-default-create-snapshot)
	(vc-default-retrieve-snapshot, vc-default-revert, vc-annotate)
	(vc-annotate-revision-previous-to-line)
	(vc-annotate-show-diff-revision-at-line, vc-annotate-warp-revision):
	* vc-svn.el (vc-svn-checkout):
	* vc-mcvs.el (vc-mcvs-checkout):
	* vc-hooks.el (vc-state, vc-default-workfile-unchanged-p)
	(vc-working-revision, vc-before-save, vc-mode-line):
	Prefer vc-call-backend to vc-call so as not to recompute the backend.

	* vc.el (vc-deduce-fileset): Don't require the checkout-model and the
	state to be consistent since it's often an unwarranted restriction.
	Don't return the state either.
	(vc-next-action): Check that the state is consistent.
	(vc-diff-internal, vc-version-diff, vc-print-log, vc-revert)
	(vc-rollback, vc-update): Adapt to new return value of
	vc-deduce-fileset.

	* vc-dispatcher.el (vc-dispatcher-browsing): Use derived-mode-p.